09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* CLI script supports indexing database tables
	* pi1 supports record indexing
	* Added XCLASS to CLI script
	* Added new fields for record indexing
	* Added slash to the database URL
	* Optimized postProc to use only one function
	* Updated manual

08-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fix: multiple copies of the same URL for indexing

10-09-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Added site limiting through piVars
	* Fixed bug: number of results was never displayed

10-03-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Lots of changes related to better search

07-03-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Removed one of two TS templates and merged its code into remaining
	* Removed RealURL lookup completely, now rely only on FE check
	* Manual updated after test installation of mnoGoSearch at TUE/Netherlands
	* CLI: added -d option and phpDoc comments

26-12-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* New implementation to obtain URL from FE
	* Fix for plugin info in Page module

26-12-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated documentation: fixed small error in the description of build procedure

08-09-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated documentation: added section about TypoScript templates
	* Added renderer for CMS layout (4.2 feature)

24-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Reindex also pages that have "clearCache" TSConfig option set
	* Added automatic table creation before reindexing
	* Updated manual: added section about creating mnogosearch database

22-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Completed implementation of MTB renderer
	* Updated manual

21-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Added template test mode in flexform configuration for pi1
	* Added exported mapped templavoila templates

19-08-2007	Dmitry Dulepov	<dmitry@typo3.org>

	* Perform post processing only for typeNum=0
	* Removed extra quotes in template files