@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2007 Dmitry Dulepov <dmitry@typo3.org>
+*  (c) 2008 Dmitry Dulepov <dmitry@typo3.org>
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -36,53 +36,6 @@
 class tx_mnogosearch_postproc {
 
 	/**
-	 * Inserts tags to disable indexing for mnoGoSearch for &lt;body&gt; to &lt;/body&gt;.
-	 * Later <code>contentPostProcCached</code> will process content to insert additional
-	 * tags where necessary.
-	 *
-	 * @param	array	$params	Unused
-	 * @param	object	$pObj	Reference to TSFE
-	 */
-	function contentPostProcAll(&$params, &$pObj) {
-		if (!intval($GLOBALS['TSFE']->config['config']['tx_mnogosearch_enable']) || $GLOBALS['TSFE']->type != 0) {
-			return;
-		}
-		$parts = preg_split('/(<\/?body\s?[^>]*>)/ims', $pObj->content, -1, PREG_SPLIT_DELIM_CAPTURE);
-		if (count($parts) == 5) {
-			$pObj->content = $parts[0] . $parts[1] . '<!--UdmComment-->' . $parts[2] .
-						'<!--/UdmComment-->' . $parts[3] . $parts[4];
-		}
-		$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['tx_mnogosearch_postproc']['indexed'] = false;
-	}
-
-	/**
-	 * Inserts mnoGoSearch tags before and after TYPO3 search tags if latter exists or
-	 * removes existing mnoGoSearch tags if TYPO3 tags do not exist
-	 * tags where necessary.
-	 *
-	 * @param	array	$params	Unused
-	 * @param	object	$pObj	Reference to TSFE
-	 */
-	function contentPostProcCached(&$params, &$pObj) {
-		if (!intval($GLOBALS['TSFE']->config['config']['tx_mnogosearch_enable']) || $GLOBALS['TSFE']->type != 0) {
-			return;
-		}
-		// Only if no login user!
-		if (!is_array($pObj->fe_user->user) && !count($pObj->fe_user->groupData['uid'])) {
-			$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['tx_mnogosearch_postproc']['indexed'] = true;
-			if (strpos($pObj->content, '<!--TYPO3SEARCH_begin-->'))  {
-				// Has search tags
-				$pObj->content = preg_replace('/<!--TYPO3SEARCH_begin-->/ims', '<!--/UdmComment--><!--TYPO3SEARCH_begin-->', $pObj->content);
-				$pObj->content = preg_replace('/<!--TYPO3SEARCH_end-->/ims', '<!--TYPO3SEARCH_end--><!--UdmComment-->', $pObj->content);
-			}
-			else {
-				// No search tags, enable search for the whole content
-				$pObj->content = preg_replace('/<!--\/?UdmComment-->/ims', '', $pObj->content);
-			}
-		}
-	}
-
-	/**
 	 * Check for <code>If-modified-since</code> header and creates <code>304 Not Modified</code> response of necessary
 	 *
 	 * @param	array	$params	Unused
@@ -92,49 +45,57 @@ class tx_mnogosearch_postproc {
 		if (!intval($GLOBALS['TSFE']->config['config']['tx_mnogosearch_enable']) || $GLOBALS['TSFE']->type != 0) {
 			return;
 		}
-		if ($pObj->register['SYS_LASTCHANGED'] && $_SERVER['HTTP_IF_MODIFIED_SINCE']) {
-			$time = strtotime($_SERVER['HTTP_IF_MODIFIED_SINCE']);
-			if ($time >= $pObj->register['SYS_LASTCHANGED']) {
-				header('HTTP/1.1 304 Not Modified');
-				$pObj->content = '';
-			}
-		}
-	}
 
-	/**
-	 * Sets <code>&lt;meta name="robots" content="..." /&gt;</code> according to caching results.
-	 * If there were no caching, sets tag's <code>content</code> attribute to <code>noindex,follow</code>.
-	 *
-	 * @param	object	$pObj	Reference to TSFE
-	 */
-	function hook_indexContent(&$pObj) {
-		if (!intval($GLOBALS['TSFE']->config['config']['tx_mnogosearch_enable']) || $GLOBALS['TSFE']->type != 0) {
-			return;
-		}
-		if (!$GLOBALS['TSFE']->config['config']['disableAllHeaderCode']) {
-			// TODO no_search, fe_login_mode flags for 'pages' table! See canIndexTable in hook.
-			if (!$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['tx_mnogosearch_postproc']['indexed']) {
-				$metaTag = '<meta name="robots" content="noindex,follow" />';
-				// Check for <meta> tags
-				if (preg_match('/<meta\s[^>]*name="robots"[^>]*>/ims', $pObj->content)) {
-					$pObj->content = preg_replace('/<meta\s[^>]*name="robots"[^>]*>/ims', $metaTag, $pObj->content);
-				}
-				else {
-					$pos = stripos($pObj->content, '</head>');
-					if ($pos > 0) {
-						$pObj->content = substr_replace($pObj->content, $metaTag . chr(10), $pos, 0);
-					}
-				}
-				// Remove mnoGoSearch tags
-				$pObj->content = preg_replace('/<!--\/?UdmComment-->/ims', '', $pObj->content);
+		// Only if no login user and page is searchable!
+		if (!$GLOBALS['TSFE']->page['no_search'] && !is_array($pObj->fe_user->user) && !count($pObj->fe_user->groupData['uid'])) {
+
+			// Add our comments
+			$parts = preg_split('/(<\/?body\s?[^>]*>)/ims', $pObj->content, -1, PREG_SPLIT_DELIM_CAPTURE);
+			if (count($parts) == 5) {
+				$pObj->content = $parts[0] . $parts[1] . '<!--UdmComment-->' . $parts[2] .
+							'<!--/UdmComment-->' . $parts[3] . $parts[4];
+			}
+
+			if (strpos($pObj->content, '<!--TYPO3SEARCH_begin-->'))  {
+				// Has search tags
+				$pObj->content = preg_replace('/<!--TYPO3SEARCH_begin-->/ims', '<!--/UdmComment--><!--TYPO3SEARCH_begin-->', $pObj->content);
+				$pObj->content = preg_replace('/<!--TYPO3SEARCH_end-->/ims', '<!--TYPO3SEARCH_end--><!--UdmComment-->', $pObj->content);
 			}
 			else {
-				if (!$pObj->config['config']['sendCacheHeaders'] && $pObj->register['SYS_LASTCHANGED']) {
+				// No search tags, enable search for the whole content
+				$pObj->content = preg_replace('/<!--\/?UdmComment-->/ims', '', $pObj->content);
+			}
+
+			// Set last modified time
+			if ($pObj->register['SYS_LASTCHANGED']) {
+				if ($_SERVER['HTTP_IF_MODIFIED_SINCE']) {
+					$time = strtotime($_SERVER['HTTP_IF_MODIFIED_SINCE']);
+					if ($time >= $pObj->register['SYS_LASTCHANGED']) {
+						header('HTTP/1.1 304 Not Modified');
+						$pObj->content = '';
+					}
+				}
+				elseif (!$pObj->config['config']['sendCacheHeaders']) {
 					header('Last-modified: ' . gmdate('D, d M Y H:i:s T', $pObj->register['SYS_LASTCHANGED']));
 				}
 			}
 		}
-		unset($GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['tx_mnogosearch_postproc']);
+		else {
+			// No search!
+			$metaTag = '<meta name="robots" content="noindex,nofollow" />';
+			// Check for <meta> tags
+			if (preg_match('/<meta\s[^>]*name="robots"[^>]*>/ims', $pObj->content)) {
+				$pObj->content = preg_replace('/<meta\s[^>]*name="robots"[^>]*>/ims', $metaTag, $pObj->content);
+			}
+			else {
+				$pos = stripos($pObj->content, '</head>');
+				if ($pos > 0) {
+					$pObj->content = substr_replace($pObj->content, $metaTag . chr(10), $pos, 0);
+				}
+			}
+			// Remove mnoGoSearch tags
+			$pObj->content = preg_replace('/<!--\/?UdmComment-->/ims', '', $pObj->content);
+		}
 	}
 }
 
